# qt5-widgets-examples

./: .gitignore  CMakeLists.txt  README.md  build.bat  format_code.bat  layout01.7z
cmake/: generate_demo.cmake  qt571.cmake
src/CusButtonGroup/: CusButtonGroup.cpp  CusButtonGroup.h  TestDialog.cpp  TestDialog.h  main.cpp
src/DockDemo/: DockDemo.pro  about_dialog.cpp  about_dialog.h  about_dialog.ui  demo_widget.cpp  demo_widget.h  demo_widget.ui  info_widget.cpp  info_widget.h  info_widget.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  utils.cpp
src/Event-01/: main.cpp
src/Event-02/: main.cpp  widget.cpp  widget.h
src/Event-03/: widget.cpp  widget.h
src/Event-04/: widget.cpp  widget.h
src/Event-05/: main.cpp  widget.cpp  widget.h
src/Event-06/: eventwidget.cpp  eventwidget.h  main.cpp
src/FontAwesome/: fontawesomeicons.cpp  fontawesomeicons.h  main.cpp  mainwindow.cpp  mainwindow.h
src/FormLayout-01/: FormLayout-01.pro  main.cpp
src/FormLayout-02/: main.cpp
src/GridLayout-01/: main.cpp  widget.cpp
src/GridLayout-02/: main.cpp
src/HBoxLayout-01/: main.cpp
src/HBoxLayout-02/: main.cpp
src/HBoxLayout-03/: main.cpp
src/HBoxLayout-04/: main.cpp
src/HBoxLayout-05/: main.cpp
src/HBoxLayout-06/: main.cpp
src/HBoxLayout-07/: main.cpp
src/HBoxLayout-08/: main.cpp
src/HTYDown/: dialognew.cpp  dialognew.h  form.cpp  form.h  mainwindow.cpp  mainwindow.h
src/HTYEdit/: dialogfind.h  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  mdichild.cpp  mdichild.h
src/HTYFloatBall/: main.cpp  mainwindow.cpp  mainwindow.h
src/HTYGIFPlayer/: mainwindow.cpp  mainwindow.h
src/HTYImageViewer/: main.cpp  mainwindow.cpp  mainwindow.h
src/HTYPaint_Qt/: HTYPaint.pro  imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.cpp  mainwindow.h
src/HTYStartMenu/: mainwindow.cpp  mainwindow.h
src/KuWo/: controlbar.cpp  lyricwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  navwidget.cpp  titlebar.cpp
src/NeteaseMusic/: controlbar.cpp  lyricwidget.cpp  mainwindow.cpp  mainwindow.h  navwidget.cpp  navwidget.h  titlebar.cpp  toplistitem.cpp  toplistitem.h
src/QComboBox-01/: widget.cpp  widget.h
src/QDockWidget-01/: main.cpp  mainwindow.cpp  mainwindow.h
src/QDockWidget-02/: main.cpp  rqttest  rqttest.cpp  rqttest.h  rqttest.pro
src/QDockWidgetDemo/: main.cpp  mainwindow.cpp  myDockTitleBar.cpp  myDockTitleBar.h
src/QSplitter-01/: main.cpp  widget.cpp  widget.h
src/QStackedWidget-01/: widget.cpp  widget.h
src/QStringListModel/: README.md  StringListModel  StringListModel.pro  main.cpp  mainwindow.cpp  mainwindow.h
src/QTabWidget-01/: widget.cpp  widget.h
src/QTabWidget-02/: tabbar.cpp  tabdemo01.pro  tabwidget.h  widget.h
src/QTabWidget-03/: tabwidget.cpp  widget.cpp
src/QTabWidget-04/: tabbar.h  tabwidget.cpp  widget.cpp  widget.h
src/QTabWidget-05/: draginouttabbar.cpp  draginouttabbar.h  draginouttabwidget.cpp  draginouttabwidget.h  widget.cpp  widget.h
src/QTabWidget-06/: main.cpp  qabstracttoolwindowmanagerarea.h  qtoolwindowmanager.h
src/QTabWidget-07/: default.qrc  main.cpp  widget.cpp
src/QTabWidget-08/: CloseButton.cpp  CloseButton.h  ComboTabBar.cpp  ComboTabBar.h  TabBar.cpp  TabBar.h  TabBarHelper.cpp  TabBarHelper.h  TabScrollBar.cpp  TabScrollBar.h  ctrl_common.cpp  ctrl_common.h  tabicon.cpp  tabicon.h  tabstackedwidget.cpp  tabstackedwidget.h  tabwidget.cpp  tabwidget.h  toolbutton.cpp  toolbutton.h  webtab.cpp  webtab.h  wheel.cpp  wheel.h  widget.cpp  widget.h
src/QTabWidget-09/: browserwindow.cpp  browserwindow.h  closedtabsmanager.cpp  closedtabsmanager.h  combotabbar.cpp  combotabbar.h  main.cpp  qzcommon.cpp  qzcommon.h  qzsettings.cpp  qztools.cpp  tabbar.cpp  tabbar.h  tabicon.cpp  tabstackedwidget.h  tabwidget.cpp  tabwidget.h  webtab.cpp  webtab.h  wheelhelper.h  widget.cpp  widget.h
src/QTableWidget01/: CMakeLists.txt  main.cpp  table.cpp  table.h
src/QTableWidget02/: CMakeLists.txt  QLineDelegate.cpp  QLineDelegate.h  main.cpp  qtablewidget_test.cpp  qtablewidget_test.h  qtablewidget_test.qrc  qtablewidget_test.ui
src/Qt_QQMusic/: form.cpp  form.h  main.cpp  mainwindow.cpp  mainwindow.h
src/Qt_StandardPixmap/: mainwindow.cpp  mainwindow.h
src/Splitter-01/: main.cpp
src/Splitter-02/: main.cpp
src/StackedLayout-01/: widget.cpp
src/TreeWidget/: CustomTreeWidget.cpp  CustomTreeWidget.h  DataTableWidgetEditorDelegate.cpp  DataTableWidgetEditorDelegate.h  UiTableWidgetItem.cpp  UiTableWidgetItem.h  UiTableWidgetItemSecond.cpp  UiTableWidgetItemSecond.h  main.cpp  mainwindow.cpp  mainwindow.h
src/addressbook/: editdialog.cpp  editdialog.h  listdialog.cpp  listdialog.h  main.cpp
src/animation-01/: main.cpp
src/animation-02/: main.cpp
src/animation-03/: main.cpp
src/animation-04/: main.cpp
src/animation-05/: default.qrc  loading.h  qgradualbox.h  widget.cpp  widget.h
src/animation-06/: main.cpp  mainwindow.cpp  mainwindow.ui
src/animation-07/: main.cpp  mainwindow.cpp  mainwindow.ui
src/animation-08/: MagicLabel.cpp  MagicLabel.cpp.orig  MagicLabel.h  MagicLabel.h.orig  tooltip.cpp  widget.cpp
src/border-image-01/: Widget01.cpp  Widget01.h  Widget02.cpp  Widget02.h  Widget03.cpp  Widget03.h  Widget04.cpp  Widget04.h  border-image-01.7z  default.qrc  loading.cpp  main.cpp
src/cmake01/: CMakeLists.txt  main.cpp  mainwindow.h
src/deepin-weather/: dblureffectwidget.cpp  dspinner.cpp  dtkwidget_global.h  main.cpp  mainwindow.cpp
src/delegate-01/: bardelegate.cpp  bardelegate.h  main.cpp
src/delegate-02/: bardelegate.cpp  bardelegate.h  main.cpp
src/dock-01/: infowidget.cpp  infowidget.h  main.cpp  sdiwindow.cpp  sdiwindow.h
src/itemanimation-01/: main.cpp
src/model-01/: intmodel.cpp  intmodel.h  main.cpp
src/model-02/: main.cpp  mulmodel.cpp  mulmodel.h
src/monitor-desktop/: main.cpp  monitorwindow.cpp  monitorwindow.h  monitot.cpp  monitot.h
src/popup-01/: main.cpp  widget.h
src/popup-02/: main.cpp  qgradualbox.cpp  tipwidget.cpp  tipwidget.h  widget.cpp  widget.h
src/qss-test/: CMakeLists.txt  main.cpp  mainwindow.cpp  (+4 more)
(+110 files in other folders)
